--- a/styl2.css
+++ b/styl2.css
@@ -161,8 +161,13 @@ footer {
     }
     
     #boxes .box{
-        margin-left: 34%
+        margin-top: 7%;
+        float: left;
+        width: 100%;
+        padding: 1%;
+        text-align: center; 
     }
+
     
      
 }
