--- a/styl2.css
+++ b/styl2.css
@@ -144,6 +144,8 @@ footer {
         float: none;
         text-align: center;
         width= 100%;
+        margin-left:3%;
+        margin-right:3%;
     }
     
     header{
